--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    list-style-type: none;
+    text-decoration: none;
 }
 
 /* Palette color */
@@ -27,6 +29,7 @@
 .w-50 {width: 50%;}
 .w-100 {width: 100%;}
 
+.h-50 {height: 50%;}
 .h-100 {height: 100%;}
 
 .py-10 {
@@ -48,4 +51,34 @@
 }
 
 /* Generics */
+header {color: var(--white);}
 
+nav {
+    height: 70px;
+    background-color: #FF6900;
+    position: fixed;
+    align-items: center;
+}
+
+ul li {
+    display: inline-block;
+    padding: 0 5px;
+}
+
+a {color: var(--white);}
+
+
+
+/* Header */
+header div.d-flex {
+    justify-content: space-between;
+    align-items: center;
+}
+
+div.menu-logo.d-flex {justify-content: center;}
+
+.menu-cta {text-align: right;}
+
+.menu-cta a {padding-left: 5px;}
+
+/* Main */
