--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@
 
 .d-flex{display: flex;}
 
+.w-20 {width: 20%;}
 .w-30 {width: 30%;}
 .w-50 {width: 50%;}
 .w-100 {width: 100%;}
@@ -169,3 +170,17 @@ div.label {
 
 
 /* Footer */
+footer div.d-flex {
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer a, .fa-brands {
+    padding-right: 5px;
+}
+
+footer h3, footer h5 {padding-bottom: 5px;}
+
+.f-social {text-align: center;}
+
+.fa-brands {font-size: 15px;}
